fix inputs on iOS

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,11 +5,11 @@
 
 * {
   -webkit-tap-highlight-color: transparent;
-  -webkit-touch-callout: none;
+  /* -webkit-touch-callout: none;
   -webkit-user-select: none;
   -khtml-user-select: none;
   -moz-user-select: none;
-  -ms-user-select: none;
+  -ms-user-select: none; */
   user-select: none;
   overscroll-behavior-y: none;
   overscroll-behavior-x: none;
